// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatsBox StatsNumber renders correctly 1`] = `
<div
  className="statsNumber "
  style={Object {}}
>
  100%
</div>
`;

exports[`StatsBox StatsResult renders correctly 1`] = `
<div
  className="statsResult "
  style={Object {}}
>
  5 total
</div>
`;

exports[`StatsBox StatsTitle renders correctly 1`] = `
<div
  className="statsTitle "
  style={Object {}}
>
  Unique Opens
</div>
`;

exports[`StatsBox renders correctly 1`] = `
<div
  className="statsBox "
  style={Object {}}
>
  <StatsTitle
    className=""
    style={Object {}}
  >
    Unique Opens
  </StatsTitle>
  <StatsNumber
    className=""
    style={Object {}}
  >
    100%
  </StatsNumber>
  <StatsResult
    className=""
    style={Object {}}
  >
    5 total
  </StatsResult>
</div>
`;
